<resources>
    <string name="app_name">Taller3</string>
    <string name="email">Ingresa tu email</string>
    <string name="password">Ingresa tu contraseña</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="click_login">Click to login</string>
    <string name="click_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="nombre">Ingresa tu nombre</string>
    <string name="apellido">Ingresa tu apellido</string>
    <string name="ingresar_ID">Ingresa tu ID</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ver_posicion">Ver posicion</string>
    <string-array name="opciones">
        <item>Seleccionar</item>
        <item>Conectarse</item>
        <item>Desconectarse</item>
        <item>Ver Disponibles</item>
    </string-array>
    <string name="title_activity_posicion">Posicion</string>
</resources>